--- a/about.html
+++ b/about.html
@@ -10,20 +10,21 @@
 
 
 <body >
-  <header>
-    <nav class="main-navigation">
-      <ul class="about">
-        <li><a href="index.html">home</a></li>
-        <li><a href="#!">about</a></li>
-      </ul>
-    </nav>
-  </header>
-
   <div data-barba="wrapper">
+    <header>
+      <nav class="main-navigation">
+        <ul class="about">
+          <li><a href="index.html">home</a></li>
+          <li class="active"><a href="#!">about</a></li>
+        </ul>
+      </nav>
+    </header>
+
+
     <!-- Only this section changes on link navigation -->
     <main data-barba="container" data-barba-namespace="index">
-        <h2>THis is a about Page</h2>
-        <div class="row">
+      <h2>THis is a about Page</h2>
+      <div class="row">
         <a class="img" href="index.html"><img src="./img4.jpg" alt=""></a>
         <a class="img" href="index.html"><img src="./img3.jpg" alt=""></a>
         <a class="img" href="index.html"><img src="./img1.jpg" alt=""></a>
